--- a/test.ipynb
+++ b/test.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "0.4838709677419355"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +214,43 @@
     "             else:\n",
     "                 seq += line.strip('\\n').upper()\n",
     "         yield Fasta(seq_id, description, seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NC_001133.9\t    Saccharomyces cerevisiae S288C chromosome I, complete sequence\t    Length=230,218\t    G+C%=39.3%\n",
+      "NC_001134.8\t    Saccharomyces cerevisiae S288C chromosome II, complete sequence\t    Length=813,184\t    G+C%=38.3%\n",
+      "NC_001135.5\t    Saccharomyces cerevisiae S288C chromosome III, complete sequence\t    Length=316,620\t    G+C%=38.5%\n",
+      "NC_001136.10\t    Saccharomyces cerevisiae S288C chromosome IV, complete sequence\t    Length=1,531,933\t    G+C%=37.9%\n",
+      "NC_001137.3\t    Saccharomyces cerevisiae S288C chromosome V, complete sequence\t    Length=576,874\t    G+C%=38.5%\n",
+      "NC_001138.5\t    Saccharomyces cerevisiae S288C chromosome VI, complete sequence\t    Length=270,161\t    G+C%=38.7%\n",
+      "NC_001139.9\t    Saccharomyces cerevisiae S288C chromosome VII, complete sequence\t    Length=1,090,940\t    G+C%=38.1%\n",
+      "NC_001140.6\t    Saccharomyces cerevisiae S288C chromosome VIII, complete sequence\t    Length=562,643\t    G+C%=38.5%\n",
+      "NC_001141.2\t    Saccharomyces cerevisiae S288C chromosome IX, complete sequence\t    Length=439,888\t    G+C%=38.9%\n",
+      "NC_001142.9\t    Saccharomyces cerevisiae S288C chromosome X, complete sequence\t    Length=745,751\t    G+C%=38.4%\n",
+      "NC_001143.9\t    Saccharomyces cerevisiae S288C chromosome XI, complete sequence\t    Length=666,816\t    G+C%=38.1%\n",
+      "NC_001144.5\t    Saccharomyces cerevisiae S288C chromosome XII, complete sequence\t    Length=1,078,177\t    G+C%=38.5%\n",
+      "NC_001145.3\t    Saccharomyces cerevisiae S288C chromosome XIII, complete sequence\t    Length=924,431\t    G+C%=38.2%\n",
+      "NC_001146.8\t    Saccharomyces cerevisiae S288C chromosome XIV, complete sequence\t    Length=784,333\t    G+C%=38.6%\n",
+      "NC_001147.6\t    Saccharomyces cerevisiae S288C chromosome XV, complete sequence\t    Length=1,091,291\t    G+C%=38.2%\n",
+      "NC_001148.4\t    Saccharomyces cerevisiae S288C chromosome XVI, complete sequence\t    Length=948,066\t    G+C%=38.1%\n",
+      "NC_001224.1\t    Saccharomyces cerevisiae S288c mitochondrion, complete genome\t    Length=85,779\t    G+C%=17.1%\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fasta in read_fasta('s288c.fna'):\n",
+    "    print(f'{fasta.id}\\t\\\n",
+    "    {fasta.description}\\t\\\n",
+    "    Length={len(fasta.seq):,d}\\t\\\n",
+    "    G+C%={fasta.get_gc_content():.1%}')"
    ]
   },
   {
