--- a/test.ipynb
+++ b/test.ipynb
@@ -255,6 +255,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Fasta:\n",
+    "    def __init__(self, id_, description, seq):\n",
+    "        self.id = id_\n",
+    "        self.description = description\n",
+    "        self.seq = seq\n",
+    "\n",
+    "    def get_gc_content(self):\n",
+    "        g_count = self.seq.count('G')\n",
+    "        c_count = self.seq.count('C')\n",
+    "        gc_count = (g_count + c_count) / len(self.seq)\n",
+    "        return gc_count\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.seq)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'<Fasta: {self.id}; {self.description}; Length={len(self)}>'\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def parse(file_name):\n",
+    "        def _parse_title(title):\n",
+    "            title = title.strip('>\\n ')\n",
+    "            if ' ' in title:\n",
+    "                seq_id, description = title.split(' ', 1)\n",
+    "            else:\n",
+    "                seq_id, description = title, ''\n",
+    "            return seq_id, description\n",
+    "\n",
+    "        with open(file_name) as fh:\n",
+    "            line = next(fh)\n",
+    "            seq_id, description = _parse_title(line)\n",
+    "            seq = ''\n",
+    "            for line in fh:\n",
+    "                if line.startswith('>'):\n",
+    "                    yield Fasta(seq_id, description, seq)\n",
+    "                    seq_id, description = _parse_title(line)\n",
+    "                    seq = ''\n",
+    "                else:\n",
+    "                    seq += line.strip('\\n')\n",
+    "        yield Fasta(seq_id, description, seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Fasta: NC_001136.10; Saccharomyces cerevisiae S288C chromosome IV, complete sequence; Length=1531933>\n",
+      "<Fasta: NC_001147.6; Saccharomyces cerevisiae S288C chromosome XV, complete sequence; Length=1091291>\n",
+      "<Fasta: NC_001139.9; Saccharomyces cerevisiae S288C chromosome VII, complete sequence; Length=1090940>\n",
+      "<Fasta: NC_001144.5; Saccharomyces cerevisiae S288C chromosome XII, complete sequence; Length=1078177>\n",
+      "<Fasta: NC_001148.4; Saccharomyces cerevisiae S288C chromosome XVI, complete sequence; Length=948066>\n",
+      "<Fasta: NC_001145.3; Saccharomyces cerevisiae S288C chromosome XIII, complete sequence; Length=924431>\n",
+      "<Fasta: NC_001134.8; Saccharomyces cerevisiae S288C chromosome II, complete sequence; Length=813184>\n",
+      "<Fasta: NC_001146.8; Saccharomyces cerevisiae S288C chromosome XIV, complete sequence; Length=784333>\n",
+      "<Fasta: NC_001142.9; Saccharomyces cerevisiae S288C chromosome X, complete sequence; Length=745751>\n",
+      "<Fasta: NC_001143.9; Saccharomyces cerevisiae S288C chromosome XI, complete sequence; Length=666816>\n",
+      "<Fasta: NC_001137.3; Saccharomyces cerevisiae S288C chromosome V, complete sequence; Length=576874>\n",
+      "<Fasta: NC_001140.6; Saccharomyces cerevisiae S288C chromosome VIII, complete sequence; Length=562643>\n",
+      "<Fasta: NC_001141.2; Saccharomyces cerevisiae S288C chromosome IX, complete sequence; Length=439888>\n",
+      "<Fasta: NC_001135.5; Saccharomyces cerevisiae S288C chromosome III, complete sequence; Length=316620>\n",
+      "<Fasta: NC_001138.5; Saccharomyces cerevisiae S288C chromosome VI, complete sequence; Length=270161>\n",
+      "<Fasta: NC_001133.9; Saccharomyces cerevisiae S288C chromosome I, complete sequence; Length=230218>\n",
+      "<Fasta: NC_001224.1; Saccharomyces cerevisiae S288c mitochondrion, complete genome; Length=85779>\n"
+     ]
+    }
+   ],
+   "source": [
+    "fasta_list = list(Fasta.parse('s288c.fna'))\n",
+    "fasta_list = sorted(fasta_list, key=len, reverse=True)\n",
+    "for fasta in fasta_list:\n",
+    "    print(fasta)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
