--- a/AtARKs_rna_seq.ipynb
+++ b/AtARKs_rna_seq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,167 +632,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "WT_osmo_tpm = df[['Name','WT_Osmo3-1_S28_R1_001 trimmed (GE) - TPM','WT_Osmo3-2_S29_R1_001 trimmed (GE) - TPM','WT_Osmo3-3_S30_R1_001 trimmed (GE) - TPM']]\n",
     "WT_osmo_tpm = WT_osmo_tpm.set_index('Name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TKO_Osmo3-1_S13_R1_001 trimmed (GE) - CPM</th>\n",
-       "      <th>TKO_Osmo3-2_S14_R1_001 trimmed (GE) - CPM</th>\n",
-       "      <th>TKO_Osmo3-3_S15_R1_001 trimmed (GE) - CPM</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>13.341780</td>\n",
-       "      <td>12.831838</td>\n",
-       "      <td>10.138809</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10.564309</td>\n",
-       "      <td>8.125179</td>\n",
-       "      <td>8.654046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.372643</td>\n",
-       "      <td>3.022170</td>\n",
-       "      <td>3.011947</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>61.501143</td>\n",
-       "      <td>62.425156</td>\n",
-       "      <td>59.517777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.396782</td>\n",
-       "      <td>0.544982</td>\n",
-       "      <td>0.636327</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32394</th>\n",
-       "      <td>23.261320</td>\n",
-       "      <td>21.452454</td>\n",
-       "      <td>19.386760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32395</th>\n",
-       "      <td>13.292183</td>\n",
-       "      <td>14.664957</td>\n",
-       "      <td>13.829505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32396</th>\n",
-       "      <td>3.620632</td>\n",
-       "      <td>3.071714</td>\n",
-       "      <td>3.690696</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32397</th>\n",
-       "      <td>14.135343</td>\n",
-       "      <td>13.525450</td>\n",
-       "      <td>16.035438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32398</th>\n",
-       "      <td>2.281494</td>\n",
-       "      <td>2.080839</td>\n",
-       "      <td>2.587729</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>32399 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       TKO_Osmo3-1_S13_R1_001 trimmed (GE) - CPM  \\\n",
-       "0                                      13.341780   \n",
-       "1                                      10.564309   \n",
-       "2                                       3.372643   \n",
-       "3                                      61.501143   \n",
-       "4                                       0.396782   \n",
-       "...                                          ...   \n",
-       "32394                                  23.261320   \n",
-       "32395                                  13.292183   \n",
-       "32396                                   3.620632   \n",
-       "32397                                  14.135343   \n",
-       "32398                                   2.281494   \n",
-       "\n",
-       "       TKO_Osmo3-2_S14_R1_001 trimmed (GE) - CPM  \\\n",
-       "0                                      12.831838   \n",
-       "1                                       8.125179   \n",
-       "2                                       3.022170   \n",
-       "3                                      62.425156   \n",
-       "4                                       0.544982   \n",
-       "...                                          ...   \n",
-       "32394                                  21.452454   \n",
-       "32395                                  14.664957   \n",
-       "32396                                   3.071714   \n",
-       "32397                                  13.525450   \n",
-       "32398                                   2.080839   \n",
-       "\n",
-       "       TKO_Osmo3-3_S15_R1_001 trimmed (GE) - CPM  \n",
-       "0                                      10.138809  \n",
-       "1                                       8.654046  \n",
-       "2                                       3.011947  \n",
-       "3                                      59.517777  \n",
-       "4                                       0.636327  \n",
-       "...                                          ...  \n",
-       "32394                                  19.386760  \n",
-       "32395                                  13.829505  \n",
-       "32396                                   3.690696  \n",
-       "32397                                  16.035438  \n",
-       "32398                                   2.587729  \n",
-       "\n",
-       "[32399 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "TKO"
    ]
   },
   {
@@ -828,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +805,7 @@
        "[32399 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +929,7 @@
        "[32399 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +962,7 @@
        "Length: 32399, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1146,13 +991,94 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dt.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.560638014383853"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.quantile(0.95)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AT1G01470', 'AT1G10760', 'AT1G12090', 'AT1G13930', 'AT1G20440',\n",
+       "       'AT1G20450', 'AT1G29395', 'AT1G43170', 'AT1G47128', 'AT1G54100',\n",
+       "       'AT1G56070', 'AT1G58270', 'AT1G60190', 'AT1G62510', 'AT1G62570',\n",
+       "       'AT1G72770', 'AT1G76180', 'AT2G15970', 'AT2G22240', 'AT2G25450',\n",
+       "       'AT2G33380', 'AT2G39800', 'AT2G42540', 'AT2G46680', 'AT3G03470',\n",
+       "       'AT3G09390', 'AT3G10420', 'AT3G11410', 'AT3G14067', 'AT3G23920',\n",
+       "       'AT3G41768', 'AT3G50970', 'AT3G57520', 'AT3G61890', 'AT4G13940',\n",
+       "       'AT4G21960', 'AT4G23670', 'AT4G26080', 'AT4G30960', 'AT4G33010',\n",
+       "       'AT4G34000', 'AT4G34710', 'AT5G01600', 'AT5G02380', 'AT5G02500',\n",
+       "       'AT5G03190', 'AT5G15960', 'AT5G15970', 'AT5G24770', 'AT5G25610',\n",
+       "       'AT5G39570', 'AT5G50950', 'AT5G52310', 'AT5G59220', 'AT5G60360',\n",
+       "       'AT5G60390', 'AT5G64840', 'AT5G66400', 'AT5G67030'],\n",
+       "      dtype='object', name='Name')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt[dt > 100].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "osmo_up = dt[dt > 100].sort_values(ascending=False).index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AT5G52310'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "osmo_up[0]"
    ]
   },
   {
