--- a/tes_20220623.ipynb
+++ b/tes_20220623.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[32399 rows x 34 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
        "[32399 rows x 34 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1475,7 @@
        "[32399 rows x 6 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,6 +1483,295 @@
    "source": [
     "# ’Cont'を含むカラムを抽出\n",
     "df_wt.loc[:, df_wt.columns.str.match('^(?=.*Cont).*')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        AT1G01010\n",
+       "1        AT1G01020\n",
+       "2        AT1G01030\n",
+       "3        AT1G01040\n",
+       "4        AT1G01046\n",
+       "           ...    \n",
+       "32394    AT5G67600\n",
+       "32395    AT5G67610\n",
+       "32396    AT5G67620\n",
+       "32397    AT5G67630\n",
+       "32398    AT5G67640\n",
+       "Name: Name, Length: 32399, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wt['Name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AtARK2 = 'AT1G73660'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>WT_Cont_1_S22_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_2_S23_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_3_S24_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_1_S22_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Cont_2_S23_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Cont_3_S24_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Osmo3-1_S28_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Osmo3-2_S29_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Osmo3-3_S30_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Osmo3-1_S28_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Osmo3-2_S29_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Osmo3-3_S30_R1_001 trimmed (GE) - CPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7393</th>\n",
+       "      <td>AT1G73660</td>\n",
+       "      <td>28.957314</td>\n",
+       "      <td>35.222208</td>\n",
+       "      <td>37.287071</td>\n",
+       "      <td>79.747122</td>\n",
+       "      <td>97.227653</td>\n",
+       "      <td>107.257812</td>\n",
+       "      <td>31.542178</td>\n",
+       "      <td>33.028429</td>\n",
+       "      <td>35.923235</td>\n",
+       "      <td>83.333523</td>\n",
+       "      <td>92.534292</td>\n",
+       "      <td>95.951948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Name  WT_Cont_1_S22_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393  AT1G73660                                28.957314   \n",
+       "\n",
+       "      WT_Cont_2_S23_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                35.222208   \n",
+       "\n",
+       "      WT_Cont_3_S24_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                37.287071   \n",
+       "\n",
+       "      WT_Cont_1_S22_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                79.747122   \n",
+       "\n",
+       "      WT_Cont_2_S23_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                97.227653   \n",
+       "\n",
+       "      WT_Cont_3_S24_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                               107.257812   \n",
+       "\n",
+       "      WT_Osmo3-1_S28_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                 31.542178   \n",
+       "\n",
+       "      WT_Osmo3-2_S29_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                 33.028429   \n",
+       "\n",
+       "      WT_Osmo3-3_S30_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                 35.923235   \n",
+       "\n",
+       "      WT_Osmo3-1_S28_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                 83.333523   \n",
+       "\n",
+       "      WT_Osmo3-2_S29_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                 92.534292   \n",
+       "\n",
+       "      WT_Osmo3-3_S30_R1_001 trimmed (GE) - CPM  \n",
+       "7393                                 95.951948  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wt[df_wt['Name'] == AtARK2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WT_Cont_1_S22_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_2_S23_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_3_S24_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_1_S22_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Cont_2_S23_R1_001 trimmed (GE) - CPM</th>\n",
+       "      <th>WT_Cont_3_S24_R1_001 trimmed (GE) - CPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7393</th>\n",
+       "      <td>28.957314</td>\n",
+       "      <td>35.222208</td>\n",
+       "      <td>37.287071</td>\n",
+       "      <td>79.747122</td>\n",
+       "      <td>97.227653</td>\n",
+       "      <td>107.257812</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      WT_Cont_1_S22_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                28.957314   \n",
+       "\n",
+       "      WT_Cont_2_S23_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                35.222208   \n",
+       "\n",
+       "      WT_Cont_3_S24_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                37.287071   \n",
+       "\n",
+       "      WT_Cont_1_S22_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                79.747122   \n",
+       "\n",
+       "      WT_Cont_2_S23_R1_001 trimmed (GE) - CPM  \\\n",
+       "7393                                97.227653   \n",
+       "\n",
+       "      WT_Cont_3_S24_R1_001 trimmed (GE) - CPM  \n",
+       "7393                               107.257812  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wt[df_wt['Name'] == AtARK2].loc[:, df_wt.columns.str.match('^(?=.*Cont).*')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WT_Cont_1_S22_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_2_S23_R1_001 trimmed (GE) - TPM</th>\n",
+       "      <th>WT_Cont_3_S24_R1_001 trimmed (GE) - TPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7393</th>\n",
+       "      <td>28.957314</td>\n",
+       "      <td>35.222208</td>\n",
+       "      <td>37.287071</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      WT_Cont_1_S22_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                28.957314   \n",
+       "\n",
+       "      WT_Cont_2_S23_R1_001 trimmed (GE) - TPM  \\\n",
+       "7393                                35.222208   \n",
+       "\n",
+       "      WT_Cont_3_S24_R1_001 trimmed (GE) - TPM  \n",
+       "7393                                37.287071  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 部分検索のAND検索\n",
+    "df_wt[df_wt['Name'] == AtARK2].loc[:, df_wt.columns.str.match('^(?=.*Cont)(?=.*TPM).*')]"
    ]
   },
   {
